--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -28,6 +28,30 @@
   font-weight: bold;
 }
 
+.list-group{
+  list-style: none;
+  padding: 5px;
+}
+.list-group-item{
+  padding: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  
+}
+.list-group-item.active,
+.list-group-item:hover{
+  background-color: rgb(240, 240, 255);
+}
+.icons{
+  margin-right: 5px;
+    font-size: 30px !important;
+}
+.adminwrapper{
+  padding: 20px;
+  color: #555;
+}
+
 /* black shade form 10-1 */
 .black-10 {
   background: #f2f2f2;
@@ -48,6 +72,58 @@
   background: #b3b3b3;
 }
 
+/* featuredInfo Style */
+.featured {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.featuredItem {
+  flex: 1;
+  margin: 0px 20px;
+  padding: 30px;
+  border-radius: 10px;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+}
+
+.featuredTitle{
+    font-size: 20px;
+}
+
+.featuredMoneyContainer{
+    margin: 10px 0px;
+    display: flex;
+    align-items: center;
+}
+
+.featuredMoney{
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.featuredMoneyRate{
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.featuredIcon{
+    font-size: 14px;
+    margin-left: 5px;
+    color: green;
+}
+
+.featuredIcon.negative{
+    color: red;
+}
+
+.featuredSub{
+    font-size: 15px;
+    color: gray;
+}
 /**
   * product image on card
   */
